--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,8 @@ html {
 }
 
 .page {
+  display: flex;
+  flex-direction: row;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -16,7 +18,9 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  align-items: center;
 }
+
 
 h1,
 h2,
@@ -37,10 +41,331 @@ ol {
   list-style: none;
 }
 
-/* Кастомный скроллбар */
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.content {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: row;
+  gap: 30px;
+  margin: auto 0;
+  padding: 0 30px;
+  min-width: 711px;
+}
+
+.result {
+  display: flex;
+  align-self: flex-end;
+  flex-direction: column;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 0;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  max-width: 100%;
+}
+
+.content__card-link{
+  max-width: 100%;
+}
+
+.content__list-container {
+  position: relative;
+  height:  298px;
+  z-index: 0;
+  overflow: auto;
+}
+
+.content__video-card-description-container {
+  max-width: 100%;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 23px;
+}
+
+.cards-list-item-template {
+  max-width: 100%;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  /*margin-bottom: 25px;*/
+}
+
+.content__video-card-thumbnail {
+  min-inline-size: 194px;
+  max-block-size: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.result__video-container {
+  position: relative;
+  z-index: 0;
+  width: 711px;
+  height: 386px;
+  margin-bottom: 16px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  overflow: auto;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+}
+
+.search-form__fieldset-title {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  text-align: left;
+  line-height: 22px;
+  margin-bottom: 7px;
+  padding: 0;
+}
+
+.search-form__fieldset:first-child > .search-form__label {
+  border-width: 1px 0 1px 0;
+  border-style: solid;
+  border-color: #fff;
+}
+fieldset {
+  border-width: 0;
+}
+.title {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  text-align: left;
+  line-height: 70px;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color:#ffffff;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:active {
+  text-decoration: none;
+  background-color: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__card-link_current {
+  color: #545050;
+}
+
+.content__video-card-title {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 30px;
+  text-align: left;
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  max-width: 196px;
+  margin-bottom: 6px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.content__video-card-description {
+  display: -webkit-box;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
+  text-align: left;
+  overflow: hidden;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__label {
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  gap: 5px;
+}
+
+.search-form__textfield {
+  display: inline-flex;
+  min-width: 225px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+  text-align: left;
+  border-width: 1px 0 1px 0;
+  border-style: solid;
+  border-color: #fff;
+  outline: none;
+  color: #fff;
+  background: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+  .search-form__textfield::placeholder {
+  color: rgb(255 255 255 / 0.7);
+}
+
+  input:active {
+    border-width: 1px;
+  }
+
+  input:focus {
+    outline: none;
+  }
+
+  label:has(input:focus-visible) {
+    outline: 1px solid #ffffff;
+    outline-offset: 1px;
+  }
+
+  .search-form__pseudo-checkbox {
+    display: block;
+    width: 19px;
+    height: 19px;
+    border: 1px solid currentColor;
+    margin-right: 5px;
+    cursor: pointer;
+  }
+
+  .search-form__pseudo-checkbox::after {
+    content: '';
+    display: block;
+    background-color: currentColor;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+  }
+  .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+    content: '';
+    opacity: 1;
+    background-color: currentColor;
+    width: 15px;
+    height: 15px;
+  }
+
+input[type="checkbox"]:hover ~ .search-form__label-text {
+  border-bottom: 1px solid currentColor;
+}
+
+.button {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: inherit;
+  line-height: 21.6px;
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid currentColor;
+  align-self: flex-end;
+  cursor: pointer;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
+  /*inline-size: 194px;*/
+  max-height: 34px;
+  min-width: 194px;
+  padding: 6px;
+
+}
+
+.more-button {
+  text-align: center;
+  width: 399px;
+  max-height: 534px;
+  margin-top: 30px;
+  padding: 5px 142px;
+
+}
+
+.button:hover {
+  text-decoration: underline 1px currentColor;
+}
+
+.button:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
+.button:focus {
+  outline: none;
+}
+
+button:focus-visible {
+  outline: 1px solid currentColor;
+  outline-offset: 1px;
+}
+
+    /* Кастомный скроллбар */
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
 }
+
 
 .custom-scrollbar::-webkit-scrollbar-track {
   background: rgb(217 217 217 / 10%);
@@ -49,3 +374,5 @@ ol {
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
 }
+
+
